Ajustes de tela Perfil

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,14 +9,14 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col ><button ion-button block class="facebookButton" (click)="facebookLogin()">Login With Facebook</button></ion-col>
+      <ion-col ><button ion-button block class="facebookButton" (click)="facebookLogin()">Logar com Facebook</button></ion-col>
     </ion-row>
     <ion-row>
-      <ion-col><button ion-button block class="instagramButton">Login With google</button></ion-col>
+      <ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>
     </ion-row>
   </ion-grid>
 
-  <div class="hrLine"><span>Or</span></div>
+  <div class="hrLine"><span>OU</span></div>
 
   <ion-list no-lines padding-top>
     <ion-item>
@@ -30,7 +30,7 @@
 
   <div padding-top>
     <button ion-button block color="light" clear (click)="register()">Não tem uma conta? Cadastre-se</button>
-    <button ion-button block color="light" clear>Forgot Password</button>
+    <button ion-button block color="light" clear>Esqueceu a Senha</button>
   </div>
 
 </ion-content>
