--- a/src/pages/notificacoes/notificacoes.html
+++ b/src/pages/notificacoes/notificacoes.html
@@ -8,4 +8,16 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page3"></ion-content>
+<ion-content padding id="page3">
+
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="img/avatar-finn.png">
+      </ion-avatar>
+      <h2>Finn</h2>
+      <h3>Don't Know What To Do!</h3>
+      <p>I've had a pretty messed up day. If we just...</p>
+    </ion-item>
+  </ion-list>
+</ion-content>
