--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,6 @@
 <ion-header >
   <ion-navbar  hideBackButton="true">
-    <ion-buttons end>
-      <button ion-button icon-right color="light">SKIP<ion-icon name="ios-arrow-forward"></ion-icon></button>
-    </ion-buttons>
+
   </ion-navbar>
 </ion-header>
 <ion-content padding>
@@ -11,9 +9,9 @@
     <ion-row>
       <ion-col ><button ion-button block class="facebookButton" (click)="facebookLogin()">Logar com Facebook</button></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>
-    </ion-row>
+    <!--<ion-row>-->
+      <!--<ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>-->
+    <!--</ion-row>-->
   </ion-grid>
 
   <div class="hrLine"><span>OU</span></div>
@@ -30,7 +28,10 @@
 
   <div padding-top>
     <button ion-button block color="light" clear (click)="register()">Não tem uma conta? Cadastre-se</button>
-    <button ion-button block color="light" clear>Esqueceu a Senha</button>
+
+    <button ion-button block color="light" clear (click)="recuperarSenha()">Esqueceu a Senha</button>
+
+    <!--<button ion-button block color="light" clear (click)="anonimo()">Logar como Anônimo</button>-->
   </div>
 
 </ion-content>
