--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -31,7 +31,7 @@
             <ion-label>
                 Estado
             </ion-label>
-            <ion-select name="estado" [(ngModel)]="profile.estado">
+            <ion-select name="estado" [(ngModel)]="post.estado">
 
                 <ion-option value="">Selecione</ion-option>
                 <ion-option value="AC">Acre</ion-option>
