Filtros erro Felino/Felina

--- a/src/pages/filtros/filtros.html
+++ b/src/pages/filtros/filtros.html
@@ -76,10 +76,10 @@
         <ion-option selected value="Todos">
           Todos
         </ion-option>
-        <ion-option value="Canino">
+        <ion-option value="Canina">
           Canino
         </ion-option>
-        <ion-option value="Felino">
+        <ion-option value="Felina">
           Felino
         </ion-option>
         <ion-option value="Outros">
