--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -8,7 +8,7 @@
 
 <ion-content>
 
-    <div class="message-wrap">
+    <div class="message-wrap" #content>
 
         <div *ngFor="let msg of messages"
              class="message"
