meus-pets e salas de chat em componentes e marcar como adotado.

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,43 +1,1 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      Chat
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content  padding class="chatPage">
-  <ion-item>
-    <a class="tab-item">
-      Mensagens Recebidas
-    </a>
-  </ion-item>
-  <ion-list no-lines >
-    <ion-item *ngFor="let msg of conversasRecebidas" (click)="goToMensagem(msg)">
-      <ion-avatar item-start>
-        <img src="{{msg.imagePet}}">
-      </ion-avatar>
-      <h2>{{msg.nomeInteressado}}</h2>
-      <h3>{{msg.nomePet}}</h3>
-    </ion-item>
-  </ion-list>
-
-  <ion-item>
-    <a class="tab-item">
-      Mensagens Enviadas
-    </a>
-  </ion-item>
-  <ion-list no-lines >
-    <ion-item *ngFor="let msg of conversasEnviadas" (click)="goToMensagem(msg)">
-      <ion-avatar item-start>
-        <img src="{{msg.imagePet}}">
-      </ion-avatar>
-      <h2>{{msg.nomeDono}}</h2>
-      <h3>{{msg.nomePet}}</h3>
-    </ion-item>
-  </ion-list>
-
-</ion-content>
+<salas-chat></salas-chat>
