--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -3,4 +3,5 @@
   <ion-tab [root]="tab2Root" tabTitle="Add Pet" tabIcon="add-circle" id="tabsController-tab2"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Meus Pets" tabIcon="logo-octocat"  id="tabsController-tab3"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Chat" tabIcon="chatboxes" id="tabsController-tab4"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Map" tabIcon="map" id="tabsController-ta5"></ion-tab>
 </ion-tabs>
