--- a/src/pages/adote/adote.html
+++ b/src/pages/adote/adote.html
@@ -1,22 +1,23 @@
 <ion-header>
-  <ion-navbar color="danger">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      Adote
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar color="danger">
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            Adote
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-  <ion-card id="adote-card21" *ngFor="let post of posts" (click)="goToPerfil(post.key, post.payload.val())">
-    <ion-list>
-      <img src="{{post.payload.val().fotoUrls[0]}}" />
-      <ion-item color="assertive" id="adote-list-item4">
-        <ion-icon name="logo-octocat" item-left> <h5>{{post.payload.val().nome}}</h5> </ion-icon>
-        <ion-icon name="paw" item-left> <h5>{{post.payload.val().raca}}</h5></ion-icon>
-        <ion-icon name="pin" item-left> <h5>{{post.payload.val().estado}}</h5></ion-icon>
-      </ion-item>
-    </ion-list>
-  </ion-card>
+    <ion-card id="adote-card21" *ngFor="let post of posts" (click)="goToPerfil(post.petKey, post.payload)">
+        <ion-list>
+            <img  src="{{post.payload.fotoUrls[0]}}"/>
+
+            <ion-item color="assertive" id="adote-list-item4">
+                <ion-icon name="logo-octocat" item-left><h5>{{post.payload.nome}}</h5></ion-icon>
+                <ion-icon name="paw" item-left><h5>{{post.payload.raca}}</h5></ion-icon>
+                <ion-icon name="pin" item-left><h5>{{post.payload.estado}}</h5></ion-icon>
+            </ion-item>
+        </ion-list>
+    </ion-card>
 </ion-content>
