--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -7,5 +7,11 @@
         <button id="goToPerfil" (click)="goToPerfil()" ion-button round>
             <span class="button-inner">Ver Perfil</span>
         </button>
+
+        <ion-buttons end>
+            <button ion-button icon-only (click)="closeModal()" style="height: 60px; font-size: 32px; width: 50px; text-align: center;">
+                <ion-icon item-right name="ios-close-outline"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-item>
 </ion-card>
