--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,7 +1,8 @@
 <ion-card>
     <ion-item>
         <ion-avatar item-start id="avatar">
-            <img id="img" src="../../assets/user.jpg">
+
+            <img  src="{{img}}"/>
         </ion-avatar>
         <p id="nome">{{text}}</p>
         <button id="goToPerfil" (click)="goToPerfil()" ion-button round>
