--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -6,7 +6,7 @@
         </ion-avatar>
         <p id="nome">{{text}}</p>
         <button id="goToPerfil" (click)="goToPerfil()" ion-button round>
-            <span class="button-inner">Ver Perfil</span>
+            <span class="button-inner">{{ "Ver Perfil" | translate }}</span>
         </button>
 
         <ion-buttons end>
