--- a/src/pages/nearby-pets/nearby-pets.html
+++ b/src/pages/nearby-pets/nearby-pets.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="secondary">
     <ion-title>
-      Mapa
+      Maps
     </ion-title>
   </ion-navbar>
 
@@ -10,7 +10,7 @@
 <ion-content>
 
   <div #pleaseConnect id="please-connect">
-    <p>Conectando...</p>
+    <p>Connecting...</p>
   </div>
 
   <div #map id="map"></div>
