--- a/src/pages/adote/adote.html
+++ b/src/pages/adote/adote.html
@@ -4,7 +4,7 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>
-            Adote
+            {{"Adote" | translate}}
         </ion-title>
     </ion-navbar>
 </ion-header>
