--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,7 +7,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Profile</ion-title>
+        <ion-title>{{ "Perfil" | translate }}</ion-title>
     </ion-navbar>
 
 </ion-header>
