--- a/src/pages/user-perfil/user-perfil.html
+++ b/src/pages/user-perfil/user-perfil.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar color="danger">
         <ion-title>
-            Meu Perfil
+            {{"Perfil" | translate}}
         </ion-title>
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
@@ -15,10 +15,10 @@
     <ion-toolbar color="light" mode="md">
         <ion-segment color="dark" mode="md" [(ngModel)]="section">
             <ion-segment-button value="one">
-                Meus Pets
+                {{ "Meus Pets" | translate }}
             </ion-segment-button>
             <ion-segment-button value="two">
-                Menssagens
+                {{ "Menssagens" | translate }}
             </ion-segment-button>
         </ion-segment>
     </ion-toolbar>
